# track-the-thing

./: .cursorrules  .dockerenv.example  .tourienv.example  AGENTS.md  README.md  docker-compose.yml  test_ci_locally.sh
.cursor/rules/: backend.mdc  database.mdc  frontend.mdc  project.mdc  testing.mdc  verification.md
.github/workflows/: ci.yml
backend/: desktop_launcher.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_lint.sh
backend/app/: db_init.py  main.py  models.py  schemas.py
backend/app/routers/: app_settings.py  backup.py  entries.py  goals.py  jupyter.py  lists.py  llm.py  mcp.py  notes.py  oembed.py  reminders.py  search.py
backend/app/services/: __init__.py  docker_bridge.py  jupyter_bridge.py
backend/migrations/: 014_fix_timezone_entries.py  020_add_custom_emojis.py  021_add_emoji_library_setting.py  022_remove_duplicate_entries.py  023_add_sprint_name_setting.py  024_add_daily_goal_end_time.py  025_add_reminders.py  026_add_texture_settings.py  027_add_entry_archived.py  028_unified_goals.py  029_add_llm_settings.py  030_add_openai_api_type.py  031_add_mcp_servers.py  032_add_remote_mcp_servers.py  033_add_dockerfile_build_support.py  034_add_stdio_transport.py  035_add_mcp_server_color.py  036_add_jupyter_notebooks.py  037_add_jupyter_python_version.py  README.md  pre_migration_backup.py  run_migrations.py  verify_migration.py
desktop/: README-desktop.md
desktop/pyinstaller/: backend.spec
desktop/tauri/: package-lock.json  (+1 more)
desktop/tauri/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/src/: lib.rs  media.rs  speech.rs  speech_bridge.m
frontend/: .eslintrc.cjs  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
scripts/: build-desktop-macos.sh
tests/: TEST_COVERAGE_PLAN.md
(+129 files in other folders)
