[package]
name = "track_the_thing_desktop"
version = "0.1.0"
description = "Track the Thing desktop shell"
authors = ["Track the Thing"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1.0"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
dotenvy = "0.15"
ureq = { version = "2.9", features = ["json"] }
shell-words = "1.1"
tokio = { version = "1.38", features = ["time"] }
dirs = "5.0"
chrono = "0.4"

# A/V capture dependencies (macOS-specific features)
[target.'cfg(target_os = "macos")'.dependencies]
nokhwa = { version = "0.10", features = ["input-avfoundation"] }
libc = "0.2"
